--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
 </head>
 <body>
     <h1 class="head">Our Menu</h1>
-        <div class="container-fluid">
             <div class="row">
-                <!-- <div class="col-md-6"> -->
-                    <section class>
+                <div class= "section col-lg-4 col-md-6 col-sm-12"> 
+                    <section id="chicken">
                         <h1>Chicken</h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam at eius tempora molestias
                         necessitatibus
                         eligendi blanditiis. Odit repudiandae maxime deserunt ullam atque accusantium veritatis, labore, illo,
                         quas voluptatibus quod unde.</section></p></section>
-                    <section class>
+                        </div>
+                        <div class="section col-lg-4 col-md-6 col-sm-12"> 
+                    <section id="beef">
                         <h1>Beef</h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam at eius tempora molestias
                         necessitatibus eligendi blanditiis. Odit repudiandae maxime deserunt ullam atque accusantium veritatis,
                         labore, illo, quas voluptatibus quod unde.</p></section>
-                    <section class>
+                        </div>
+                        <div class="section col-lg-4 col-md-12 col-sm-12"> 
+                    <section id="sushi">
                         <h1>Sushi</h1>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam at eius tempora molestias
                         necessitatibus eligendi blanditiis. Odit repudiandae maxime deserunt ullam atque accusantium
                         veritatis, labore, illo, quas voluptatibus quod unde.</p></section>
-                        <!-- </div> -->
+                        </div> 
                 </div>
-            </div> 
 </body>
 </html>
